# modellogger

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
modellogger/: log_config.py
tests/: example_cli.py  example_lower_library.py  example_top_library.py  test_full_cli.py  test_log_config.py  test_logger_compatibility.py
